--- a/templates/base/layout.tmpl
+++ b/templates/base/layout.tmpl
@@ -54,26 +54,21 @@
         <div class="layui-side layui-bg-black">
             <div class="layui-side-scroll">
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-                <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                    <li class="layui-nav-item layui-nav-itemed">
-                        <a class="" href="javascript:;">menu group 1</a>
-                        <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">menu 1</a></dd>
-                            <dd><a href="javascript:;">menu 2</a></dd>
-                            <dd><a href="javascript:;">menu 3</a></dd>
-                            <dd><a href="javascript:;">the links</a></dd>
-                        </dl>
-                    </li>
+                <ul class="layui-nav layui-nav-tree">
+                    {{ range .menu }}
+                    {{ if .Children }}
                     <li class="layui-nav-item">
-                        <a href="javascript:;">menu group 2</a>
+                        <a href="javascript:;">{{ .Title }}</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">list 1</a></dd>
-                            <dd><a href="javascript:;">list 2</a></dd>
-                            <dd><a href="javascript:;">超链接</a></dd>
+                            {{ range .Children }}
+                            <dd><a href="{{ .Uri }}">{{ .Title }}</a></dd>
+                            {{ end }}
                         </dl>
                     </li>
-                    <li class="layui-nav-item"><a href="javascript:;">click menu item</a></li>
-                    <li class="layui-nav-item"><a href="javascript:;">the links</a></li>
+                    {{ else }}
+                    <li class="layui-nav-item"><a href="{{ .Uri }}">{{ .Title }}</a></li>
+                    {{ end }}
+                    {{ end }}
                 </ul>
             </div>
         </div>
@@ -90,8 +85,9 @@
     </div>
 
     <script src="/assets/layui.js"></script>
+    {{ template "js" . }}
     <script>
-        //JS 
+        // JS 
         layui.use(['element', 'layer', 'util'], function () {
             var element = layui.element;
             var layer = layui.layer;
