--- a/templates/base/layout.tmpl
+++ b/templates/base/layout.tmpl
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/assets/css/layui.css" rel="stylesheet">
+    {{ template "css" . }}
 </head>
 
 <body>
@@ -72,16 +73,16 @@
                 </ul>
             </div>
         </div>
-        <div class="layui-body" style="background-color: #f2f2f2;">
+        <div class="layui-body" style="background-color: #f2f2f2; bottom: unset;">
             <!-- 内容主体区域 -->
             <div style="padding: 15px;">
                 {{ template "content" . }}
             </div>
         </div>
-        <div class="layui-footer">
-            <!-- 底部固定区域 -->
+        <!-- 底部固定区域 -->
+        <!-- <div class="layui-footer">
             底部固定区域
-        </div>
+        </div> -->
     </div>
 
     <script src="/assets/layui.js"></script>
