--- a/templates/index/read.tmpl
+++ b/templates/index/read.tmpl
@@ -1,6 +1,3 @@
-{{ define "css" }}
-{{ end }}
-
 {{ define "content" }}
 
 <div class="layui-row layui-col-space15">
@@ -8,7 +5,7 @@
         <div class="layui-card">
             <div class="layui-card-header">标题</div>
             <div class="layui-card-body">
-                index
+                read
             </div>
         </div>
     </div>
@@ -17,13 +14,10 @@
         <div class="layui-card">
             <div class="layui-card-header">标题</div>
             <div class="layui-card-body">
-                index
+                read
             </div>
         </div>
     </div>
 </div>
 
-{{ end }}
-
-{{ define "js" }}
 {{ end }}
