--- a/templates/users/index.tmpl
+++ b/templates/users/index.tmpl
@@ -270,6 +270,32 @@
             , page: true
         });
 
+        table.on("tool(users-table)", function (obj) {
+            let data = obj.data;
+
+            switch (obj.event) {
+                case 'edit':
+                    let paramObj = {
+                        id: data.id
+                        , master_university_id: data.master_university_id
+                        , master_organization_id: data.master_organization_id
+                    }
+                    let paramStr = $.param(paramObj);
+                    layer.open({
+                        type: 2,
+                        title: '编辑',
+                        shadeClose: true,
+                        maxmin: true, // 开启最大化最小化按钮
+                        area: ['1200px', '600px'],
+                        content: "/user/edit?" + paramStr
+                    });
+                    break;
+
+                default:
+                    break;
+            }
+        })
+
         // 搜索提交
         form.on('submit(users-table-search)', function (data) {
             // 获得表单字段
