--- a/templates/users/index.tmpl
+++ b/templates/users/index.tmpl
@@ -279,6 +279,7 @@
                         id: data.id
                         , master_university_id: data.master_university_id
                         , master_organization_id: data.master_organization_id
+                        , master_science_id: data.master_science_id
                     }
                     let paramStr = $.param(paramObj);
                     layer.open({
