--- a/templates/users/index.tmpl
+++ b/templates/users/index.tmpl
@@ -280,6 +280,7 @@
                         , master_university_id: data.master_university_id
                         , master_organization_id: data.master_organization_id
                         , master_science_id: data.master_science_id
+                        , master_negotiate_id: data.master_negotiate_id
                     }
                     let paramStr = $.param(paramObj);
                     layer.open({
