--- a/templates/users/index.tmpl
+++ b/templates/users/index.tmpl
@@ -281,6 +281,7 @@
                         , master_organization_id: data.master_organization_id
                         , master_science_id: data.master_science_id
                         , master_negotiate_id: data.master_negotiate_id
+                        , master_industry_id: data.master_industry_id
                     }
                     let paramStr = $.param(paramObj);
                     layer.open({
