--- a/templates/users/index.tmpl
+++ b/templates/users/index.tmpl
@@ -282,6 +282,7 @@
                         , master_science_id: data.master_science_id
                         , master_negotiate_id: data.master_negotiate_id
                         , master_industry_id: data.master_industry_id
+                        , master_job_id: data.master_job_id
                     }
                     let paramStr = $.param(paramObj);
                     layer.open({
