--- a/templates/users/index.tmpl
+++ b/templates/users/index.tmpl
@@ -283,6 +283,7 @@
                         , master_negotiate_id: data.master_negotiate_id
                         , master_industry_id: data.master_industry_id
                         , master_job_id: data.master_job_id
+                        , master_welfare_id: data.master_welfare_id
                     }
                     let paramStr = $.param(paramObj);
                     layer.open({
