--- a/templates/users/index.tmpl
+++ b/templates/users/index.tmpl
@@ -284,6 +284,7 @@
                         , master_industry_id: data.master_industry_id
                         , master_job_id: data.master_job_id
                         , master_welfare_id: data.master_welfare_id
+                        , master_location_id: data.master_location_id
                     }
                     let paramStr = $.param(paramObj);
                     layer.open({
