--- a/templates/users/index.tmpl
+++ b/templates/users/index.tmpl
@@ -285,6 +285,7 @@
                         , master_job_id: data.master_job_id
                         , master_welfare_id: data.master_welfare_id
                         , master_location_id: data.master_location_id
+                        , master_scale_id: data.master_scale_id
                     }
                     let paramStr = $.param(paramObj);
                     layer.open({
