--- a/templates/users/edit.tmpl
+++ b/templates/users/edit.tmpl
@@ -191,7 +191,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">AP内定</label>
                     <div class="layui-input-block LAY-border-style">
-                        <input type="checkbox" name="ap_informal_offer" title="ON|OFF" lay-skin="switch">
+                        <input type="checkbox" name="ap_informal_offer" value="1" title="ON|OFF" lay-skin="switch">
                     </div>
                 </div>
             </div>
@@ -364,7 +364,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">配信停止フラグ</label>
                     <div class="layui-input-block LAY-border-style">
-                        <input type="checkbox" name="unsubscribe" title="ON|OFF" lay-skin="switch">
+                        <input type="checkbox" name="unsubscribe" value="1" title="ON|OFF" lay-skin="switch">
                     </div>
                 </div>
             </div>
@@ -372,7 +372,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">TELNGフラグ</label>
                     <div class="layui-input-block LAY-border-style">
-                        <input type="checkbox" name="flag_telng" title="ON|OFF" lay-skin="switch">
+                        <input type="checkbox" name="flag_telng" value="1" title="ON|OFF" lay-skin="switch">
                     </div>
                 </div>
             </div>
@@ -380,7 +380,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">退会フラグ</label>
                     <div class="layui-input-block LAY-border-style">
-                        <input type="checkbox" name="flag_withdrawal" title="ON|OFF" lay-skin="switch">
+                        <input type="checkbox" name="flag_withdrawal" value="1" title="ON|OFF" lay-skin="switch">
                     </div>
                 </div>
             </div>
@@ -396,12 +396,12 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">削除</label>
                     <div class="layui-input-block LAY-border-style">
-                        <input type="checkbox" name="deleted_at" title="ON|OFF" lay-skin="switch">
+                        <input type="checkbox" name="deleted_at" value="1" title="ON|OFF" lay-skin="switch">
                     </div>
                 </div>
             </div>
             <div class="layui-btn-container layui-col-xs12">
-                <button class="layui-btn" lay-submit lay-filter="demo-search">保存</button>
+                <button class="layui-btn" lay-submit lay-filter="users-save">保存</button>
                 <button type="reset" class="layui-btn layui-btn-primary">Reset</button>
             </div>
         </form>
@@ -574,15 +574,17 @@
                     })
                         .done(function (r) {
                             let option = "";
-                            r.data.map(data => {
-                                option += '<option value="' + data.id + '">' + data.name + '</option>';
-                            })
-                            let optgroup = '<optgroup label="' + res.data.name + '">' + option + '</optgroup>';
-                            $("#master-location").append(optgroup);
-                            form.val("users-form", {
-                                "master_location_id": paramInfo.master_location_id
-                            });
-                            form.render();
+                            if (r.data) {
+                                r.data.map(data => {
+                                    option += '<option value="' + data.id + '">' + data.name + '</option>';
+                                })
+                                let optgroup = '<optgroup label="' + res.data.name + '">' + option + '</optgroup>';
+                                $("#master-location").append(optgroup);
+                                form.val("users-form", {
+                                    "master_location_id": paramInfo.master_location_id
+                                });
+                                form.render();
+                            }
                         })
                 })
         }
@@ -609,6 +611,34 @@
                 $("#university-name-opt").hide();
                 $('input[name="university_name_opt"]').val("");
             }
+        })
+
+        form.on("submit(users-save)", function (obj) {
+            let master_negotiate_ids = [];
+            $.each(obj.field, function (key, value) {
+                if (key.indexOf("master_negotiate_id[") === 0 && key.slice(-1) === "]") {
+                    master_negotiate_ids.push(value);
+                }
+            });
+            obj.field.master_negotiate_id = master_negotiate_ids.join(",");
+            let graduations = obj.field.graduation.split("-");
+            obj.field.graduation_year = graduations[0];
+            obj.field.graduation_month = graduations[1];
+            console.log(obj.field);
+            $.ajax({
+                url: "/user/update/" + paramInfo.id
+                , type: "put"
+                , data: obj.field
+            })
+                .done(function (res) {
+                    layer.msg(res.message, {}, function () {
+                        var index = parent.layer.getFrameIndex(window.name);
+                        parent.layer.close(index);
+                        parent.layui.table.reloadData("users-table");
+                    })
+                    console.log(res);
+                })
+            return false;
         })
     })
 
