--- a/templates/base/layout.tmpl
+++ b/templates/base/layout.tmpl
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>layout 管理界面大布局示例 - Layui</title>
+    <title>Layui</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,16 +58,16 @@
                 <ul class="layui-nav layui-nav-tree">
                     {{ range .menu }}
                     {{ if .Children }}
-                    <li class="layui-nav-item">
+                    <li class="layui-nav-item {{ if eq $.title .Title }}layui-nav-itemed{{ end }}">
                         <a href="javascript:;">{{ .Title }}</a>
                         <dl class="layui-nav-child">
                             {{ range .Children }}
-                            <dd><a href="{{ .Uri }}">{{ .Title }}</a></dd>
+                            <dd class="{{ if eq $.uri .Uri }}layui-this{{ end }}"><a href="{{ .Uri }}">{{ .Title }}</a></dd>
                             {{ end }}
                         </dl>
                     </li>
                     {{ else }}
-                    <li class="layui-nav-item"><a href="{{ .Uri }}">{{ .Title }}</a></li>
+                    <li class="layui-nav-item {{ if eq $.title .Title }}layui-this{{ end }}"><a href="{{ .Uri }}">{{ .Title }}</a></li>
                     {{ end }}
                     {{ end }}
                 </ul>
