--- a/templates/index/index.tmpl
+++ b/templates/index/index.tmpl
@@ -6,18 +6,105 @@
 <div class="layui-row layui-col-space15">
     <div class="layui-col-md6">
         <div class="layui-card">
-            <div class="layui-card-header">标题</div>
+            <div class="layui-card-header">お問い合わせ</div>
             <div class="layui-card-body">
-                index
+                <p>未対応(2)件</p>
             </div>
         </div>
     </div>
-    
+
     <div class="layui-col-md6">
         <div class="layui-card">
-            <div class="layui-card-header">标题</div>
+            <div class="layui-card-header">ﾒｰﾘﾝｸﾞﾘｽﾄ</div>
             <div class="layui-card-body">
-                index
+                <p>配信日時未設定</p>
+                <p>未設定件数(1)件</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-col-md12">
+        <div class="layui-card">
+            <div class="layui-card-header">2024年度会員数</div>
+            <div class="layui-card-body">
+                <p>会員数</p>
+                <p>現在の会員数(14)名</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-col-md3">
+        <div class="layui-card">
+            <div class="layui-card-header">会員数</div>
+            <div class="layui-card-body">
+                <p>会員数</p>
+                <p>(東海)</p>
+                <p>現在の会員数(14)名</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-col-md3">
+        <div class="layui-card">
+            <div class="layui-card-header">会員数</div>
+            <div class="layui-card-body">
+                <p>会員数</p>
+                <p>(中国)</p>
+                <p>現在の会員数(14)名</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-col-md3">
+        <div class="layui-card">
+            <div class="layui-card-header">会員数</div>
+            <div class="layui-card-body">
+                <p>会員数</p>
+                <p>(関西)</p>
+                <p>現在の会員数(14)名</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-col-md3">
+        <div class="layui-card">
+            <div class="layui-card-header">会員数</div>
+            <div class="layui-card-body">
+                <p>会員数</p>
+                <p>(関東)</p>
+                <p>現在の会員数(14)名</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-col-md12">
+        <div class="layui-card">
+            <div class="layui-card-header">2025年度会員数</div>
+            <div class="layui-card-body">
+                <p>会員数</p>
+                <p>現在の会員数(14)名</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-col-md3">
+        <div class="layui-card">
+            <div class="layui-card-header">会員数</div>
+            <div class="layui-card-body">
+                <p>会員数</p>
+                <p>(関東)</p>
+                <p>現在の会員数(14)名</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-col-md3">
+        <div class="layui-card">
+            <div class="layui-card-header">会員数</div>
+            <div class="layui-card-body">
+                <p>会員数</p>
+                <p>(他の地域)</p>
+                <p>現在の会員数(14)名</p>
             </div>
         </div>
     </div>
