--- a/templates/users/edit.tmpl
+++ b/templates/users/edit.tmpl
@@ -1,5 +1,9 @@
 {{ define "css" }}
 <style>
+    .layui-form-item {
+        margin-bottom: 0;
+    }
+
     .layui-form-pane .layui-form-label {
         width: 190px;
     }
